tests/error/type_match/base_case_array_mismatched_type.bz
// error: unable to match type 'i64' to 'i32'
// note: while matching expression of type '[4: i64]' to '[4: i32]'
function test()
{
	let _: [4: i32] = [4: i64]();
}
